# faircmd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: hybrid_interactive.cpp  machine_basic.cpp  split_interactive.cpp
include/: faircmd.hpp  faircmd_hybrid.hpp  faircmd_machine.hpp  faircmd_split.hpp
tests/: machine_fifo.cpp
